--- a/resources/private/common-html/css/main.css
+++ b/resources/private/common-html/css/main.css
@@ -9692,203 +9692,204 @@ div.search i {
   color: #333333;
   text-transform: none;
   margin-bottom: 6px;
+  display: inline-block;
 }
-/* line 14, ../sass/partials/_bulletins.scss */
+/* line 15, ../sass/partials/_bulletins.scss */
 #bulletins h1 {
   font-weight: 900;
   font-size: 3.75rem;
 }
-/* line 19, ../sass/partials/_bulletins.scss */
+/* line 20, ../sass/partials/_bulletins.scss */
 #bulletins h2 {
   font-weight: 300;
   font-size: 3rem;
 }
-/* line 24, ../sass/partials/_bulletins.scss */
+/* line 25, ../sass/partials/_bulletins.scss */
 #bulletins h3 {
   font-weight: 700;
   font-size: 2rem;
 }
-/* line 29, ../sass/partials/_bulletins.scss */
+/* line 30, ../sass/partials/_bulletins.scss */
 #bulletins h4 {
   font-weight: 400;
   font-size: 1.5rem;
   text-transform: uppercase;
 }
-/* line 35, ../sass/partials/_bulletins.scss */
+/* line 36, ../sass/partials/_bulletins.scss */
 #bulletins h5 {
   font-weight: 700;
   font-size: 1.125rem;
 }
-/* line 40, ../sass/partials/_bulletins.scss */
+/* line 41, ../sass/partials/_bulletins.scss */
 #bulletins p {
   margin-bottom: 20px;
 }
-/* line 44, ../sass/partials/_bulletins.scss */
+/* line 45, ../sass/partials/_bulletins.scss */
 #bulletins .intro {
   font-weight: 300;
   font-size: 1.375rem;
   margin-top: 20px;
 }
-/* line 48, ../sass/partials/_bulletins.scss */
+/* line 49, ../sass/partials/_bulletins.scss */
 #bulletins .intro button {
   margin-left: 20px;
 }
-/* line 53, ../sass/partials/_bulletins.scss */
+/* line 54, ../sass/partials/_bulletins.scss */
 #bulletins .help-toggle {
   color: #0fbbf7;
 }
-/* line 56, ../sass/partials/_bulletins.scss */
+/* line 57, ../sass/partials/_bulletins.scss */
 #bulletins .help-toggle .lupicon-circle-question {
   color: #0fbbf7;
 }
-/* line 58, ../sass/partials/_bulletins.scss */
+/* line 59, ../sass/partials/_bulletins.scss */
 #bulletins .help-toggle .lupicon-circle-question.expanded {
   color: #0fbbf7;
 }
-/* line 64, ../sass/partials/_bulletins.scss */
+/* line 65, ../sass/partials/_bulletins.scss */
 #bulletins .help-text {
   border-color: #0fbbf7;
 }
-/* line 69, ../sass/partials/_bulletins.scss */
+/* line 70, ../sass/partials/_bulletins.scss */
 #bulletins .help-arrow:before {
   border-bottom-color: #0fbbf7;
 }
-/* line 75, ../sass/partials/_bulletins.scss */
+/* line 76, ../sass/partials/_bulletins.scss */
 #bulletins input:focus {
   border-color: #0fcff7;
 }
-/* line 84, ../sass/partials/_bulletins.scss */
+/* line 85, ../sass/partials/_bulletins.scss */
 #bulletins .blue-bg {
   background-color: #0fa8f7;
 }
-/* line 86, ../sass/partials/_bulletins.scss */
+/* line 87, ../sass/partials/_bulletins.scss */
 #bulletins .blue-bg h1, #bulletins .blue-bg p {
   color: #fff;
 }
-/* line 91, ../sass/partials/_bulletins.scss */
+/* line 92, ../sass/partials/_bulletins.scss */
 #bulletins .gray-bg {
   background-color: #eeeeee;
 }
-/* line 95, ../sass/partials/_bulletins.scss */
+/* line 96, ../sass/partials/_bulletins.scss */
 #bulletins .content-center {
   max-width: 1280px;
   margin: 0 auto;
   position: relative;
   padding: 40px 0;
 }
-/* line 102, ../sass/partials/_bulletins.scss */
+/* line 103, ../sass/partials/_bulletins.scss */
 #bulletins .full {
   width: 100%;
   min-width: 320px;
 }
-/* line 107, ../sass/partials/_bulletins.scss */
+/* line 108, ../sass/partials/_bulletins.scss */
 #bulletins .slogan, #bulletins .ingress {
   text-align: center;
   width: 80%;
   margin: 0 auto 20px;
 }
-/* line 115, ../sass/partials/_bulletins.scss */
+/* line 116, ../sass/partials/_bulletins.scss */
 #bulletins .autocomplete-component .autocomplete-selection-wrapper i.tag-chevron {
   color: #0fa8f7;
 }
-/* line 117, ../sass/partials/_bulletins.scss */
+/* line 118, ../sass/partials/_bulletins.scss */
 #bulletins .autocomplete-component .autocomplete-selection-wrapper i.tag-chevron.toggle {
   color: #0fcff7;
 }
-/* line 122, ../sass/partials/_bulletins.scss */
+/* line 123, ../sass/partials/_bulletins.scss */
 #bulletins .autocomplete-component .autocomplete-selection-wrapper.active {
   border-color: #0fcff7;
 }
-/* line 124, ../sass/partials/_bulletins.scss */
+/* line 125, ../sass/partials/_bulletins.scss */
 #bulletins .autocomplete-component .autocomplete-selection-wrapper.active .tag-chevron {
   color: #0fcff7;
 }
-/* line 129, ../sass/partials/_bulletins.scss */
+/* line 130, ../sass/partials/_bulletins.scss */
 #bulletins .autocomplete-component .search .search-icon {
   color: #0fa8f7;
 }
-/* line 133, ../sass/partials/_bulletins.scss */
+/* line 134, ../sass/partials/_bulletins.scss */
 #bulletins .autocomplete-component .search.active .search-icon {
   color: #0fcff7;
 }
-/* line 139, ../sass/partials/_bulletins.scss */
+/* line 140, ../sass/partials/_bulletins.scss */
 #bulletins .autocomplete-component .autocomplete-dropdown ul.autocomplete-result {
   border-color: #0fcff7;
 }
-/* line 141, ../sass/partials/_bulletins.scss */
+/* line 142, ../sass/partials/_bulletins.scss */
 #bulletins .autocomplete-component .autocomplete-dropdown ul.autocomplete-result li.autocomplete-result-item.active {
   background-color: #0fbbf7;
 }
-/* line 143, ../sass/partials/_bulletins.scss */
+/* line 144, ../sass/partials/_bulletins.scss */
 #bulletins .autocomplete-component .autocomplete-dropdown ul.autocomplete-result li.autocomplete-result-item.active:active {
   background-color: #0fcff7;
 }
-/* line 152, ../sass/partials/_bulletins.scss */
+/* line 153, ../sass/partials/_bulletins.scss */
 #bulletins .form-grid textarea {
   display: block;
 }
-/* line 154, ../sass/partials/_bulletins.scss */
+/* line 155, ../sass/partials/_bulletins.scss */
 #bulletins .form-grid textarea:focus {
   color: #333333;
   border-color: #0fcff7;
 }
-/* line 160, ../sass/partials/_bulletins.scss */
+/* line 161, ../sass/partials/_bulletins.scss */
 #bulletins .search-button-wrapper {
   text-align: center;
 }
-/* line 163, ../sass/partials/_bulletins.scss */
+/* line 164, ../sass/partials/_bulletins.scss */
 #bulletins .search-button-wrapper button span:last-child {
   padding-left: 6px;
 }
-/* line 164, ../sass/partials/_bulletins.scss */
+/* line 165, ../sass/partials/_bulletins.scss */
 #bulletins .search-button-wrapper button span:last-child:before {
   content: "(";
 }
-/* line 167, ../sass/partials/_bulletins.scss */
+/* line 168, ../sass/partials/_bulletins.scss */
 #bulletins .search-button-wrapper button span:last-child:after {
   content: ")";
 }
-/* line 176, ../sass/partials/_bulletins.scss */
+/* line 177, ../sass/partials/_bulletins.scss */
 #bulletins .bulletins-search h3 {
   text-align: center;
 }
-/* line 180, ../sass/partials/_bulletins.scss */
+/* line 181, ../sass/partials/_bulletins.scss */
 #bulletins .bulletins-search .search-field i {
   color: #0fa8f7;
 }
-/* line 184, ../sass/partials/_bulletins.scss */
+/* line 185, ../sass/partials/_bulletins.scss */
 #bulletins .bulletins-search .search-field.active i {
   color: #0fcff7;
 }
-/* line 208, ../sass/partials/_bulletins.scss */
+/* line 209, ../sass/partials/_bulletins.scss */
 #bulletins #application-bulletins-list th.sixth {
   width: 5%;
 }
-/* line 214, ../sass/partials/_bulletins.scss */
+/* line 215, ../sass/partials/_bulletins.scss */
 #bulletins #application-bulletins-list th > i {
   color: #0fa8f7;
   position: absolute;
 }
-/* line 221, ../sass/partials/_bulletins.scss */
+/* line 222, ../sass/partials/_bulletins.scss */
 #bulletins .bulletin-comment h5 {
   display: inline-block;
 }
-/* line 224, ../sass/partials/_bulletins.scss */
+/* line 225, ../sass/partials/_bulletins.scss */
 #bulletins .bulletin-comment .help-toggle {
   vertical-align: top;
 }
-/* line 228, ../sass/partials/_bulletins.scss */
+/* line 229, ../sass/partials/_bulletins.scss */
 #bulletins ul.bulletin-comment__attachment-list {
   display: table;
   list-style: none;
   padding: 0;
 }
-/* line 232, ../sass/partials/_bulletins.scss */
+/* line 233, ../sass/partials/_bulletins.scss */
 #bulletins ul.bulletin-comment__attachment-list li {
   display: table-row;
   padding: 0;
 }
-/* line 235, ../sass/partials/_bulletins.scss */
+/* line 236, ../sass/partials/_bulletins.scss */
 #bulletins ul.bulletin-comment__attachment-list li span {
   display: table-cell;
   padding-right: 24px;
