--- a/resources/private/common-html/css/main.css
+++ b/resources/private/common-html/css/main.css
@@ -6027,9 +6027,9 @@ div.alleYli-radioGroup {
 }
 /* line 1292, ../sass/partials/_forms.scss */
 .form-grid.form-grid--columns-11 > .row .col-11 {
-  width: 100.0%;
-  min-width: 100.0%;
-  max-width: 100.0%;
+  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
 }
 
 /* line 1292, ../sass/partials/_forms.scss */
@@ -10713,6 +10713,11 @@ span.icon_clear:before {
 }
 
 /* line 434, ../sass/views/_application.scss */
+#construction-time-documents {
+  margin-top: 24px;
+}
+
+/* line 438, ../sass/views/_application.scss */
 .ajax-loading-mask {
   display: none;
   position: absolute;
@@ -10723,263 +10728,263 @@ span.icon_clear:before {
   height: 100%;
   background: #fff;
 }
-/* line 443, ../sass/views/_application.scss */
+/* line 447, ../sass/views/_application.scss */
 .ajax-loading-mask .content {
   display: table;
   margin: 0 auto;
 }
-/* line 446, ../sass/views/_application.scss */
+/* line 450, ../sass/views/_application.scss */
 .ajax-loading-mask .content img {
   display: table;
   margin: 0 auto;
 }
-/* line 450, ../sass/views/_application.scss */
+/* line 454, ../sass/views/_application.scss */
 .ajax-loading-mask .content div {
   margin-top: 25px;
 }
 
-/* line 456, ../sass/views/_application.scss */
+/* line 460, ../sass/views/_application.scss */
 .process-nav {
   margin-top: 24px;
 }
-/* line 458, ../sass/views/_application.scss */
+/* line 462, ../sass/views/_application.scss */
 .process-nav .process-next {
   float: right;
 }
 
-/* line 463, ../sass/views/_application.scss */
+/* line 467, ../sass/views/_application.scss */
 #create .tree-last {
   font-size: 15px;
 }
-/* line 465, ../sass/views/_application.scss */
+/* line 469, ../sass/views/_application.scss */
 #create .tree-last li {
   font-size: 15px;
 }
-/* line 468, ../sass/views/_application.scss */
+/* line 472, ../sass/views/_application.scss */
 #create .tree-last .attachments-list {
   padding-left: 25px;
 }
 
-/* line 474, ../sass/views/_application.scss */
+/* line 478, ../sass/views/_application.scss */
 #dialog-request-for-statement button {
   margin-top: 24px;
 }
 
-/* line 479, ../sass/views/_application.scss */
+/* line 483, ../sass/views/_application.scss */
 .form-input.textarea.high {
   height: 144px;
   width: 80%;
 }
 
-/* line 485, ../sass/views/_application.scss */
+/* line 489, ../sass/views/_application.scss */
 #neighbors .map {
   width: 100%;
   height: 280px;
 }
 
-/* line 491, ../sass/views/_application.scss */
+/* line 495, ../sass/views/_application.scss */
 .application-neighbors {
   padding-top: 20px;
 }
-/* line 493, ../sass/views/_application.scss */
+/* line 497, ../sass/views/_application.scss */
 .application-neighbors td {
   vertical-align: top;
 }
-/* line 495, ../sass/views/_application.scss */
+/* line 499, ../sass/views/_application.scss */
 .application-neighbors td a.command {
   display: block;
 }
-/* line 498, ../sass/views/_application.scss */
+/* line 502, ../sass/views/_application.scss */
 .application-neighbors td .owner-name {
   font-weight: bold;
 }
-/* line 501, ../sass/views/_application.scss */
+/* line 505, ../sass/views/_application.scss */
 .application-neighbors td .owner-street {
   display: block;
   padding-left: 8px;
 }
-/* line 505, ../sass/views/_application.scss */
+/* line 509, ../sass/views/_application.scss */
 .application-neighbors td .owner-zip {
   padding-left: 8px;
 }
-/* line 508, ../sass/views/_application.scss */
+/* line 512, ../sass/views/_application.scss */
 .application-neighbors td .owner-email {
   display: block;
   font-style: italic;
 }
-/* line 512, ../sass/views/_application.scss */
+/* line 516, ../sass/views/_application.scss */
 .application-neighbors td .status-state {
   font-weight: bold;
 }
-/* line 515, ../sass/views/_application.scss */
+/* line 519, ../sass/views/_application.scss */
 .application-neighbors td .status-time {
   display: block;
   font-style: italic;
 }
 
-/* line 523, ../sass/views/_application.scss */
+/* line 527, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .dialog-content, #dialog-verdict-attachment-prints-order-history .dialog-content {
   padding-left: 15px;
 }
-/* line 526, ../sass/views/_application.scss */
+/* line 530, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .order-amount, #dialog-verdict-attachment-prints-order-history .order-amount {
   width: 18px;
 }
-/* line 529, ../sass/views/_application.scss */
+/* line 533, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .btn-prints-dialog-ok, #dialog-verdict-attachment-prints-order-history .btn-prints-dialog-ok {
   margin-left: 15px;
 }
-/* line 533, ../sass/views/_application.scss */
+/* line 537, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .context-error, #dialog-verdict-attachment-prints-order-history .context-error {
   max-width: 820px;
   word-wrap: break-word;
 }
-/* line 547, ../sass/views/_application.scss */
+/* line 551, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers, #dialog-verdict-attachment-prints-order-history .fixed-headers {
   width: 820px;
   table-layout: fixed;
   margin-right: 20px;
 }
-/* line 552, ../sass/views/_application.scss */
+/* line 556, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers .center, #dialog-verdict-attachment-prints-order-history .fixed-headers .center {
   text-align: center;
 }
-/* line 556, ../sass/views/_application.scss */
+/* line 560, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers td, #dialog-verdict-attachment-prints-order-history .fixed-headers td {
   word-wrap: break-word;
 }
-/* line 560, ../sass/views/_application.scss */
+/* line 564, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers td:nth-child(1), #dialog-verdict-attachment-prints-order .fixed-headers th:nth-child(1), #dialog-verdict-attachment-prints-order-history .fixed-headers td:nth-child(1), #dialog-verdict-attachment-prints-order-history .fixed-headers th:nth-child(1) {
   width: 200px;
   max-width: 200px;
 }
-/* line 564, ../sass/views/_application.scss */
+/* line 568, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers td:nth-child(2), #dialog-verdict-attachment-prints-order .fixed-headers th:nth-child(2), #dialog-verdict-attachment-prints-order-history .fixed-headers td:nth-child(2), #dialog-verdict-attachment-prints-order-history .fixed-headers th:nth-child(2) {
   width: 200px;
   max-width: 200px;
 }
-/* line 568, ../sass/views/_application.scss */
+/* line 572, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers td:nth-child(3), #dialog-verdict-attachment-prints-order .fixed-headers th:nth-child(3), #dialog-verdict-attachment-prints-order-history .fixed-headers td:nth-child(3), #dialog-verdict-attachment-prints-order-history .fixed-headers th:nth-child(3) {
   width: 300px;
   max-width: 300px;
 }
-/* line 572, ../sass/views/_application.scss */
+/* line 576, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers td:nth-child(4), #dialog-verdict-attachment-prints-order .fixed-headers th:nth-child(4), #dialog-verdict-attachment-prints-order-history .fixed-headers td:nth-child(4), #dialog-verdict-attachment-prints-order-history .fixed-headers th:nth-child(4) {
   width: 120px;
   max-width: 120px;
 }
-/* line 578, ../sass/views/_application.scss */
+/* line 582, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers thead tr, #dialog-verdict-attachment-prints-order-history .fixed-headers thead tr {
   display: block;
   position: relative;
 }
-/* line 583, ../sass/views/_application.scss */
+/* line 587, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .fixed-headers tbody, #dialog-verdict-attachment-prints-order-history .fixed-headers tbody {
   display: block;
   overflow: auto;
   width: 100%;
   max-height: 200px;
 }
-/* line 591, ../sass/views/_application.scss */
+/* line 595, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .old_ie_wrapper, #dialog-verdict-attachment-prints-order-history .old_ie_wrapper {
   max-height: 200px;
   width: 820px;
   overflow-x: hidden;
   overflow-y: auto;
 }
-/* line 596, ../sass/views/_application.scss */
+/* line 600, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order .old_ie_wrapper tbody, #dialog-verdict-attachment-prints-order-history .old_ie_wrapper tbody {
   height: auto;
 }
 
-/* line 601, ../sass/views/_application.scss */
+/* line 605, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order-history .history-dialog-description {
   margin-bottom: 12px;
 }
-/* line 605, ../sass/views/_application.scss */
+/* line 609, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order-history .history-items {
   margin-top: 6px;
   overflow-y: auto;
   max-height: 500px;
 }
-/* line 610, ../sass/views/_application.scss */
+/* line 614, ../sass/views/_application.scss */
 #dialog-verdict-attachment-prints-order-history .history-items .history-item {
   margin: 6px 0;
 }
 
-/* line 617, ../sass/views/_application.scss */
+/* line 621, ../sass/views/_application.scss */
 .key-value-pair label {
   vertical-align: top;
   display: inline-block;
   width: 25%;
 }
-/* line 622, ../sass/views/_application.scss */
+/* line 626, ../sass/views/_application.scss */
 .key-value-pair .value {
   vertical-align: top;
   display: inline-block;
 }
 
-/* line 628, ../sass/views/_application.scss */
+/* line 632, ../sass/views/_application.scss */
 .inforequest-conversation {
   margin-top: 42px;
 }
-/* line 630, ../sass/views/_application.scss */
+/* line 634, ../sass/views/_application.scss */
 .inforequest-conversation h2 {
   border-bottom: 1px solid #c3c3c3;
 }
 
-/* line 635, ../sass/views/_application.scss */
+/* line 639, ../sass/views/_application.scss */
 .attachments-actions {
   margin-bottom: 24px;
 }
-/* line 637, ../sass/views/_application.scss */
+/* line 641, ../sass/views/_application.scss */
 .attachments-actions h3 {
   margin-top: 12px;
   font-weight: bold;
 }
 
-/* line 643, ../sass/views/_application.scss */
+/* line 647, ../sass/views/_application.scss */
 .parties-list {
   width: 100%;
   margin-bottom: 6px;
 }
-/* line 646, ../sass/views/_application.scss */
+/* line 650, ../sass/views/_application.scss */
 .parties-list button {
   margin: 12px 0;
 }
-/* line 649, ../sass/views/_application.scss */
+/* line 653, ../sass/views/_application.scss */
 .parties-list .party {
   display: table-row;
 }
-/* line 651, ../sass/views/_application.scss */
+/* line 655, ../sass/views/_application.scss */
 .parties-list .party .person {
   display: table-cell;
   padding-right: 12px;
 }
-/* line 655, ../sass/views/_application.scss */
+/* line 659, ../sass/views/_application.scss */
 .parties-list .party .invite-state {
   display: table-cell;
   padding-right: 12px;
 }
-/* line 659, ../sass/views/_application.scss */
+/* line 663, ../sass/views/_application.scss */
 .parties-list .party .invite-action {
   display: table-cell;
   padding-right: 12px;
 }
 
-/* line 667, ../sass/views/_application.scss */
+/* line 671, ../sass/views/_application.scss */
 #inforequest-marker-map {
   width: 30%;
   height: 520px;
   float: right;
   z-index: 2;
 }
-/* line 672, ../sass/views/_application.scss */
+/* line 676, ../sass/views/_application.scss */
 #inforequest-marker-map image {
   cursor: pointer;
 }
 
-/* line 677, ../sass/views/_application.scss */
+/* line 681, ../sass/views/_application.scss */
 #inforequest-marker-map-contents {
   z-index: 2;
   right: 30%;
@@ -10995,188 +11000,188 @@ span.icon_clear:before {
   border: 1px solid #b5b5b5;
   box-shadow: 1px 1px 2px #828282;
 }
-/* line 692, ../sass/views/_application.scss */
+/* line 696, ../sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card {
   padding: 12px;
   z-index: 10000;
   border-top: 1px solid #b5b5b5;
   width: 100%;
 }
-/* line 698, ../sass/views/_application.scss */
+/* line 702, ../sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card h3 {
   font-size: 20px;
 }
-/* line 700, ../sass/views/_application.scss */
+/* line 704, ../sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card h3.operation-type {
   margin-bottom: 12px;
 }
-/* line 705, ../sass/views/_application.scss */
+/* line 709, ../sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card .timestamp {
   float: right;
   font-size: 14px;
 }
-/* line 709, ../sass/views/_application.scss */
+/* line 713, ../sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card a {
   color: #333;
 }
-/* line 712, ../sass/views/_application.scss */
+/* line 716, ../sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card:first-child {
   border-top: none;
 }
-/* line 716, ../sass/views/_application.scss */
+/* line 720, ../sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card div {
   padding-bottom: 4px;
   margin-bottom: 8px;
   border-bottom: 1px solid #e8e8e8;
 }
-/* line 720, ../sass/views/_application.scss */
+/* line 724, ../sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card div:last-child {
   border-bottom: none;
   padding-bottom: 0px;
 }
-/* line 724, ../sass/views/_application.scss */
+/* line 728, ../sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card div blockquote {
   font-size: 16px;
 }
-/* line 727, ../sass/views/_application.scss */
+/* line 731, ../sass/views/_application.scss */
 #inforequest-marker-map-contents .inforequest-card div .comment-type {
   font-weight: 700;
 }
 
-/* line 736, ../sass/views/_application.scss */
+/* line 740, ../sass/views/_application.scss */
 .verdict-text {
   white-space: pre-line;
   width: 28.75em;
 }
 
-/* line 741, ../sass/views/_application.scss */
+/* line 745, ../sass/views/_application.scss */
 .required-field-error-doc {
   margin: 24px 0 6px;
 }
 
-/* line 745, ../sass/views/_application.scss */
+/* line 749, ../sass/views/_application.scss */
 .requiredField-line {
   display: table-row;
 }
-/* line 747, ../sass/views/_application.scss */
+/* line 751, ../sass/views/_application.scss */
 .requiredField-line span, .requiredField-line a {
   display: table-cell;
 }
-/* line 750, ../sass/views/_application.scss */
+/* line 754, ../sass/views/_application.scss */
 .requiredField-line a {
   padding-left: 12px;
 }
-/* line 753, ../sass/views/_application.scss */
+/* line 757, ../sass/views/_application.scss */
 .requiredField-line .required-field-error-element-name {
   padding-left: 6px;
 }
-/* line 756, ../sass/views/_application.scss */
+/* line 760, ../sass/views/_application.scss */
 .requiredField-line .lupicon-circle-attention {
   color: #e34319;
 }
 
-/* line 761, ../sass/views/_application.scss */
+/* line 765, ../sass/views/_application.scss */
 .invited-foremans {
   margin-bottom: 24px;
 }
-/* line 763, ../sass/views/_application.scss */
+/* line 767, ../sass/views/_application.scss */
 .invited-foremans .foreman {
   display: table-row;
 }
-/* line 765, ../sass/views/_application.scss */
+/* line 769, ../sass/views/_application.scss */
 .invited-foremans .foreman span {
   display: table-cell;
   padding-right: 6px;
 }
-/* line 773, ../sass/views/_application.scss */
+/* line 777, ../sass/views/_application.scss */
 .invited-foremans .foreman-state:before {
   content: "(";
 }
-/* line 776, ../sass/views/_application.scss */
+/* line 780, ../sass/views/_application.scss */
 .invited-foremans .foreman-state:after {
   content: ")";
 }
 
-/* line 782, ../sass/views/_application.scss */
+/* line 786, ../sass/views/_application.scss */
 .tasks-foreman {
   position: relative;
 }
-/* line 785, ../sass/views/_application.scss */
+/* line 789, ../sass/views/_application.scss */
 .tasks-foreman .form-input {
   display: inline-block;
   margin: 0 6px 0 0;
 }
-/* line 791, ../sass/views/_application.scss */
+/* line 795, ../sass/views/_application.scss */
 .tasks-foreman .form-input.combobox.long, .tasks-foreman select.long {
   width: 41.25em;
 }
-/* line 796, ../sass/views/_application.scss */
+/* line 800, ../sass/views/_application.scss */
 .tasks-foreman thead tr:first-child td {
   padding-left: 0;
 }
-/* line 801, ../sass/views/_application.scss */
+/* line 805, ../sass/views/_application.scss */
 .tasks-foreman .foreman-state:before {
   content: "(";
 }
-/* line 804, ../sass/views/_application.scss */
+/* line 808, ../sass/views/_application.scss */
 .tasks-foreman .foreman-state:after {
   content: ")";
 }
-/* line 809, ../sass/views/_application.scss */
+/* line 813, ../sass/views/_application.scss */
 .tasks-foreman .add-foreman:before {
   content: "[";
 }
-/* line 812, ../sass/views/_application.scss */
+/* line 816, ../sass/views/_application.scss */
 .tasks-foreman .add-foreman:after {
   content: "]";
 }
 
-/* line 818, ../sass/views/_application.scss */
+/* line 822, ../sass/views/_application.scss */
 .operation-info {
   width: 55%;
   display: inline-block;
   vertical-align: top;
 }
 
-/* line 823, ../sass/views/_application.scss */
+/* line 827, ../sass/views/_application.scss */
 .organizationLinks {
   vertical-align: top;
   width: 39%;
   padding-left: 48px;
   display: inline-block;
 }
-/* line 828, ../sass/views/_application.scss */
+/* line 832, ../sass/views/_application.scss */
 .organizationLinks .organization-links {
   margin-bottom: 12px;
 }
-/* line 830, ../sass/views/_application.scss */
+/* line 834, ../sass/views/_application.scss */
 .organizationLinks .organization-links a {
   color: #333;
 }
-/* line 832, ../sass/views/_application.scss */
+/* line 836, ../sass/views/_application.scss */
 .organizationLinks .organization-links a:active, .organizationLinks .organization-links a:visited, .organizationLinks .organization-links a:hover {
   color: #333;
 }
 
-/* line 840, ../sass/views/_application.scss */
+/* line 844, ../sass/views/_application.scss */
 #application-metadata-tab h1 {
   float: none;
 }
-/* line 843, ../sass/views/_application.scss */
+/* line 847, ../sass/views/_application.scss */
 #application-metadata-tab .table-metadata {
   max-width: 875px;
 }
-/* line 845, ../sass/views/_application.scss */
+/* line 849, ../sass/views/_application.scss */
 #application-metadata-tab .table-metadata .metadata-key {
   width: 175px;
 }
 
-/* line 852, ../sass/views/_application.scss */
+/* line 856, ../sass/views/_application.scss */
 #application-requiredFieldSummary-tab .auth-actions button {
   display: block;
 }
 
-/* line 857, ../sass/views/_application.scss */
+/* line 861, ../sass/views/_application.scss */
 h2 > i.is-right {
   float: right;
 }
