--- a/resources/private/common-html/sass/views/_application.scss
+++ b/resources/private/common-html/sass/views/_application.scss
@@ -431,6 +431,10 @@ $app-gray-darkest: $gray187;
   }
 }
 
+#construction-time-documents {
+  margin-top: $marginL;
+}
+
 .ajax-loading-mask {
   display: none;
   position: absolute;
