--- a/resources/private/common-html/sass/partials/_bulletins.scss
+++ b/resources/private/common-html/sass/partials/_bulletins.scss
@@ -239,4 +239,12 @@
       }
     }
   }
+  table.bulletin-attachments {
+    tr td {
+      word-wrap: break-word;
+      &:first-child {
+        padding-left: 12px;
+      }
+    }
+  }
 }
