--- a/resources/private/common-html/css/main.css
+++ b/resources/private/common-html/css/main.css
@@ -9910,6 +9910,11 @@ div.search i {
   padding-right: 24px;
 }
 
+/* line 246, ../sass/partials/_bulletins.scss */
+#fileupload-input {
+  margin-top: 100px;
+}
+
 /* VIEWS
 ------------------------------------------------------------------------------*/
 @media (max-width: 47.5em) {
