--- a/resources/private/common-html/sass/partials/_buttons.scss
+++ b/resources/private/common-html/sass/partials/_buttons.scss
@@ -208,6 +208,7 @@ i.btn-small {
   a.btn.#{$name} { @content; }
   i.btn.#{$name} { @content; }
   span.btn.#{$name} { @content; }
+  label.btn.#{$name} { @content; }
 }
 
 @mixin styled-input ($bg, $hover-bg, $active-bg,
