add pointer style

--- a/resources/private/common-html/sass/partials/_bulletins.scss
+++ b/resources/private/common-html/sass/partials/_bulletins.scss
@@ -215,6 +215,9 @@
       color: $blue-dark;
       position: absolute;
     }
+    tbody > tr {
+      cursor: pointer;
+    }
   }
 
   .bulletin-comment {
