--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -545,7 +545,7 @@ input.form-input.inline {
   }
 
   .form-table .form-input.combobox, select {
-    width: $cols2;
+    min-width: $cols2;
   }
 
   .form-table .form-indicator {
