styling action links

--- a/resources/private/common-html/sass/partials/_tables.scss
+++ b/resources/private/common-html/sass/partials/_tables.scss
@@ -66,6 +66,14 @@ th, td {
   .icon {
     margin: $marginM $marginM $marginS $marginM;
   }
+  &.actions {
+    a {
+      margin-right: $marginM;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
 }
 
 th.action-column, td.action-column {
