margin between components

--- a/resources/private/common-html/sass/views/_application.scss
+++ b/resources/private/common-html/sass/views/_application.scss
@@ -867,4 +867,7 @@ h2 > i.is-right {
   .bulletin-state {
     font-weight: bold;
   }
+  .bulletin-component {
+    margin-bottom: $marginL;
+  }
 }
