--- a/resources/private/common-html/sass/partials/_bulletins.scss
+++ b/resources/private/common-html/sass/partials/_bulletins.scss
@@ -258,3 +258,15 @@
     }
   }
 }
+
+#application-bulletin-tab {
+  .bulletin-state {
+    font-weight: bold;
+  }
+  .bulletin-component {
+    margin-bottom: $marginL;
+  }
+  .back-button {
+    margin-bottom: $marginL;
+  }
+}
