missing from last commit

--- a/resources/private/common-html/sass/main.scss
+++ b/resources/private/common-html/sass/main.scss
@@ -118,6 +118,7 @@
 @import "partials/_applications_search";
 @import "partials/_indicator";
 @import "partials/_bulletins";
+@import "partials/_bulletin-comments";
 
 /* VIEWS
 ------------------------------------------------------------------------------*/
