editable proclaimed bulletin

--- a/resources/private/common-html/sass/partials/_bulletins.scss
+++ b/resources/private/common-html/sass/partials/_bulletins.scss
@@ -269,4 +269,10 @@
   .back-button {
     margin-bottom: $marginL;
   }
+  .accordion_content {
+    padding: $marginM;
+  }
+  table {
+    margin: 0;
+  }
 }
