--- a/resources/private/common-html/sass/partials/_tree.scss
+++ b/resources/private/common-html/sass/partials/_tree.scss
@@ -84,7 +84,7 @@ $tree-height: 320px;
     float: left;
     text-align: left;
     li {
-      list-style-type: none;
+      list-style-type: circle;
       a {
         color: $color-text;
       }
@@ -95,8 +95,10 @@ $tree-height: 320px;
     }
     button {
       margin-top: $baseline;
-      /* font-size:14px; */
       width: 18em;
+    }
+    .organization-links li {
+      list-style-type: none;
     }
   }
 }
@@ -104,10 +106,4 @@ $tree-height: 320px;
 .tree-width  {
   width: $tree-width;
   height: $baseline * 5;
-}
-ul.attachments-list {
-  list-style-type: circle;
-  li.mandatory-attachments {
-    list-style-type:circle;
-  }
 }
