- updated operations.ya-kayttolupa-tapahtumat.desc - in operation descriptions, using <p> instead of <br><br> - updated styles of the last page of the operations tree

--- a/resources/private/common-html/sass/partials/_tree.scss
+++ b/resources/private/common-html/sass/partials/_tree.scss
@@ -97,6 +97,13 @@ $tree-height: 320px;
       margin-top: $baseline;
       width: 18em;
     }
+    .operation-description {
+      margin-top: $marginL;
+      margin-bottom: $marginL;
+      p {
+        margin: $marginM 0;
+      }
+    }
     .organization-links li {
       list-style-type: none;
     }
