togglable user description

--- a/resources/private/common-html/sass/partials/_bulletin-comments.scss
+++ b/resources/private/common-html/sass/partials/_bulletin-comments.scss
@@ -5,6 +5,7 @@
     background-color: $gray221;
     height: $grid-min-height;
     padding: $marginS $marginM;
+    cursor: pointer;
   }
   .bulletin-comment__index {
     margin-right: $marginS;
