fix verdict styles

--- a/resources/private/common-html/sass/partials/_accordion.scss
+++ b/resources/private/common-html/sass/partials/_accordion.scss
@@ -59,8 +59,12 @@
     position: relative;
     border: 1px solid $gray221;
     border-top: none;
+    h1, h2, h3 {
+      margin-left: $marginS;
+    }
     .accordion-content-part {
       margin-left: $marginM;
+      margin-right: $marginM;
       margin-bottom: $marginM;
     }
     .accordion-fields {
