--- a/resources/private/common-html/sass/partials/_accordion.scss
+++ b/resources/private/common-html/sass/partials/_accordion.scss
@@ -59,7 +59,7 @@
     position: relative;
     border: 1px solid $gray221;
     border-top: none;
-    h1, h2, h3 {
+    h1, h2, h3, h4 {
       margin-left: $marginS;
     }
     .accordion-content-part {
