--- a/resources/private/common-html/sass/partials/_lupicons.scss
+++ b/resources/private/common-html/sass/partials/_lupicons.scss
@@ -7,11 +7,11 @@ $lupicon-size: 22px;
 
 @font-face {
   font-family: 'lupapiste';
-  src:url('/fonts/lupapiste.eot?llkzyu');
-  src:url('/fonts/lupapiste.eot?llkzyu#iefix') format('embedded-opentype'),
-    url('/fonts/lupapiste.ttf?llkzyu') format('truetype'),
-    url('/fonts/lupapiste.woff?llkzyu') format('woff'),
-    url('/fonts/lupapiste.svg?llkzyu#lupapiste') format('svg');
+  src:url('/fonts/lupapiste.eot?yodggb');
+  src:url('/fonts/lupapiste.eot?yodggb#iefix') format('embedded-opentype'),
+    url('/fonts/lupapiste.ttf?yodggb') format('truetype'),
+    url('/fonts/lupapiste.woff?yodggb') format('woff'),
+    url('/fonts/lupapiste.svg?yodggb#lupapiste') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -63,6 +63,12 @@ $lupicon-size: 22px;
   cursor: default;
 }
 
+.lupicon-add-circle:before {
+  content: "\e903";
+}
+.lupicon-location-plus:before {
+  content: "\e904";
+}
 .lupicon-lock:before {
   content: "\e900";
 }
