Moved OpenLayers styles to scss

--- a/resources/private/common-html/sass/main.scss
+++ b/resources/private/common-html/sass/main.scss
@@ -138,7 +138,7 @@
 @import "views/_side_panel";
 @import "views/_company";
 @import "views/_attachment_multiselect";
-
+@import "views/_openlayers2";
 
 /*------------------------------------*\
     OTHER
