--- a/resources/private/common-html/sass/views/_openlayers2.scss
+++ b/resources/private/common-html/sass/views/_openlayers2.scss
@@ -1,3 +1,10 @@
+/*
+ * Based OpenLayers default theme.
+ *
+ * Note: classes for some of the controls have been deleted!
+ *
+ */
+
 div.olMap {
     z-index: 0;
     padding: 0 !important;
