Draw circle as a 40 sided polygon. Dummy icon as a placeholder.

--- a/resources/private/common-html/sass/views/_openlayers2.scss
+++ b/resources/private/common-html/sass/views/_openlayers2.scss
@@ -315,6 +315,12 @@ div.olControlZoom a:hover {
 .olControlEditingToolbar .olControlDrawFeaturePolygonItemActive {
     background-position: -26px -24px;
 }
+.olControlEditingToolbar .olControlDrawFeatureEllipseItemInactive{
+    background-position: -128px -1px;
+}
+.olControlEditingToolbar .olControlDrawFeatureEllipseItemActive {
+    background-position: -128px -24px;
+}
 
 
 /**
