Switch cursor to crosshair when drawing

--- a/resources/private/common-html/sass/views/_openlayers2.scss
+++ b/resources/private/common-html/sass/views/_openlayers2.scss
@@ -137,6 +137,11 @@ div.olControlMousePosition {
 .olControlDragFeatureActive.olControlDragFeatureOver.olDragDown {
     cursor: -moz-grabbing;
 }
+.olControlDrawFeaturePolygonActive > div:first-child,
+.olControlDrawFeaturePointActive > div:first-child,
+.olControlDrawFeatureCircleActive > div:first-child {
+    cursor: crosshair;
+}
 
 div.olControlZoom {
     position: absolute;
