pointer cursor on buttons

--- a/resources/private/common-html/sass/views/_openlayers2.scss
+++ b/resources/private/common-html/sass/views/_openlayers2.scss
@@ -190,6 +190,7 @@ div.olControlZoom a:hover, .olControlLupapisteEditingToolbar div:hover {
 .olControlLupapisteEditingToolbar div {
     line-height: 37px;
     border-top-width: 0;
+    cursor: pointer;
 
 }
 /* individual controls */
