--- a/resources/private/common-html/sass/main.scss
+++ b/resources/private/common-html/sass/main.scss
@@ -117,6 +117,7 @@
 @import "partials/_archival-summary";
 @import "partials/_applications_search";
 @import "partials/_indicator";
+@import "partials/_indicator-icon";
 @import "partials/_bulletins";
 @import "partials/_bulletin-comments";
 
