--- a/resources/private/common-html/sass/views/_application.scss
+++ b/resources/private/common-html/sass/views/_application.scss
@@ -517,6 +517,9 @@ $app-gray-darkest: $gray187;
 #invite-statement-givers-section {
   margin-top: 24px;
   margin-bottom: 24px;
+  padding: 24px;
+  border: 1px solid lighten($lp-dark-grey, 40%);
+
   #choose-statement-givers-title {
     font-weight: bold;
   }
