remove extra span.form-entrys

--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -501,7 +501,7 @@ input.form-input.inline {
     padding: $marginS $marginM;
   }
 
-  #table-huoneistot, #table-muutHankkeet {
+  .huoneistot-table {
     td, th {
       padding: $marginS;
     }
