--- a/resources/private/common-html/sass/views/_authority_admin.scss
+++ b/resources/private/common-html/sass/views/_authority_admin.scss
@@ -14,6 +14,15 @@
   }
 }
 
+table.admin-settings {
+  td { width: 50%; }
+  td.value {
+    input { width: 80%; }
+    .save-indicator { top: 0px; }
+    position: relative;
+  }
+}
+
 // Municipality maps
 .munimaps {
   h3 {
