--- a/resources/private/common-html/sass/partials/_indicator.scss
+++ b/resources/private/common-html/sass/partials/_indicator.scss
@@ -39,3 +39,9 @@
     float: right;
   }
 }
+
+// Tabs on (authority) admin page block the view
+.admin #indicator .indicator-bar, .authority-admin #indicator .indicator-bar {
+  z-index: 2003;
+  margin-top: -38px;
+}
