--- a/resources/private/common-html/sass/partials/_indicator.scss
+++ b/resources/private/common-html/sass/partials/_indicator.scss
@@ -44,4 +44,5 @@
 .admin #indicator .indicator-bar, .authority-admin #indicator .indicator-bar {
   z-index: 2003;
   margin-top: -38px;
+  height: 52px;
 }
