in statements table, show the "dueDate" in color red when the due date has passed

--- a/resources/private/common-html/sass/views/_application.scss
+++ b/resources/private/common-html/sass/views/_application.scss
@@ -528,6 +528,10 @@ $app-gray-darkest: $gray187;
   }
 }
 
+.statement-over-due {
+  color: red;
+}
+
 .form-input.textarea.high {
   height: $baseline *6;
   width: 80%;
