Cover tabs with mask

--- a/resources/private/common-html/sass/views/_authority_admin.scss
+++ b/resources/private/common-html/sass/views/_authority_admin.scss
@@ -51,3 +51,8 @@ table.admin-settings {
     margin-top: $marginL;
   }
 }
+
+.authority-admin .mask {
+  /* cover the tabs*/
+  margin-top: -38px;
+}
