fix css class from 'error' to 'err'

--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -40,7 +40,8 @@ legend {
   &.source-value-changed {
     border: 2px solid $lp-green;
   }
-  &.error {
+  &.err {
+    color: red;
     border-color: red;
     border-width: 3px;
   }
