lausunto saateText to not resizable

--- a/resources/private/common-html/sass/views/_application.scss
+++ b/resources/private/common-html/sass/views/_application.scss
@@ -523,6 +523,10 @@ $app-gray-darkest: $gray187;
   #choose-statement-givers-title {
     font-weight: bold;
   }
+  #invite-statement-giver-saateText {
+    resize: none;
+    width: 99%;
+  }
   button {
       margin-top: $marginL;
   }
