make lock-icon orange

--- a/resources/private/common-html/sass/views/_application.scss
+++ b/resources/private/common-html/sass/views/_application.scss
@@ -449,7 +449,8 @@ $app-gray-darkest: $gray187;
   i.lupicon-circle-section-sign {
     color: $positive;
   }
-  i.lupicon-circle-star {
+  i.lupicon-circle-star,
+  i.lupicon-lock {
     color: $primary;
   }
   i.lupicon-circle-attention {
