fix css bug with bulletin comments

--- a/resources/private/common-html/sass/partials/_bulletin-comments.scss
+++ b/resources/private/common-html/sass/partials/_bulletin-comments.scss
@@ -20,6 +20,7 @@
   }
   .bulletin-comment__body {
     padding: $marginS $marginM;
+    clear: both;
   }
   .bulletin-comment__attachments {
     margin-bottom: $marginS;
