show name as link to highlight it can be clicked

--- a/resources/private/common-html/sass/partials/_bulletin-comments.scss
+++ b/resources/private/common-html/sass/partials/_bulletin-comments.scss
@@ -14,6 +14,9 @@
     }
   }
   .bulletin-comment__name {
+    @include styled-input( none, none, none,
+                           $text: $orange-link, $hover-text: $orange-hover,
+                           $active-text: $orange-active, $disabled-bg: none);
     &:after {
       content: ",";
     }
