prevent admin page to slip under nav bar

--- a/resources/private/common-html/sass/views/_admin.scss
+++ b/resources/private/common-html/sass/views/_admin.scss
@@ -47,3 +47,14 @@
     box-sizing: border-box;
   }
 }
+
+.admin {
+  .page {
+    margin-top: 130px;
+  }
+  .users-table {
+    .filters {
+      margin-bottom: $marginM;
+    }
+  }
+}
