Always use https URIs to make CSP easier

--- a/resources/private/common-html/sass/partials/_typography.scss
+++ b/resources/private/common-html/sass/partials/_typography.scss
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,200italic,300italic,400italic,600italic,700italic);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,200italic,300italic,400italic,600italic,700italic);
 $font-body: 'Source Sans Pro', sans-serif;
 $font-heading: 'Source Sans Pro', sans-serif;
 $font-size-body: 15px;
